// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readout matches snapshot when primary is true or false 1`] = `
<ReadoutDisplay
  primary={true}
  theme={
    Object {
      "BORDER_RADIUS_BASE": "3px",
      "COLOR_BACKGROUND_A": "#ffffff",
      "COLOR_BACKGROUND_B": "#F8F8F8",
      "COLOR_BACKGROUND_C": "#000000",
      "COLOR_BRAND_A": "#0aab2a",
      "COLOR_BRAND_B": "#0aab2a",
      "COLOR_CONTENT": "#000",
      "COLOR_INTENT_DANGER": "#D83D22",
      "COLOR_INTENT_HIGHLIGHT": "#0aab2a",
      "COLOR_INTENT_INFO": "#1E6DF6",
      "COLOR_INTENT_SUCCESS": "#0aab2a",
      "COLOR_INTENT_WARNING": "#F7CD45",
      "COLOR_KEYLINE": "rgba(0,0,0,0.08)",
      "COLOR_KEYLINE_SOLID": "#EBEBEB",
      "FONTS_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONTS_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONTS_SYSTEM": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_SIZE_BASE": "14px",
      "FONT_SIZE_HERO": "40px",
      "FONT_SIZE_LG": "18px",
      "FONT_SIZE_MD": "16px",
      "FONT_SIZE_SM": "11px",
      "FONT_SIZE_TITLE": "36px",
      "FONT_SIZE_XS": "9px",
      "FONT_STACK_BASE": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_STACK_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONT_STACK_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONT_WEIGHT_BASE": 400,
      "FONT_WEIGHT_BOLD": 800,
      "FONT_WEIGHT_SEMIBOLD": 600,
      "ICON_VIEWBOX_SIZE": 24,
      "LINE_HEIGHT_BASE": 1.4,
      "OPACITY_100": "1",
      "OPACITY_15": "0.15",
      "OPACITY_50": "0.5",
      "OPACITY_70": "0.7",
      "RADIUS_05": "4px",
      "RADIUS_1": "8px",
      "RADIUS_2": "16px",
      "RADIUS_3": "24px",
      "RADIUS_4": "32px",
      "RADIUS_5": "40px",
      "RADIUS_6": "48px",
      "RADIUS_7": "56px",
      "RADIUS_8": "64px",
      "SPACING_BASE": 8,
      "ZINDEX_STICKY": "1010",
      "ZINDEX_TOOLTIP": "1070",
      "name": "Keen",
    }
  }
/>
`;

exports[`Readout matches snapshot when primary is true or false 2`] = `
<ReadoutDisplay
  primary={false}
  theme={
    Object {
      "BORDER_RADIUS_BASE": "3px",
      "COLOR_BACKGROUND_A": "#ffffff",
      "COLOR_BACKGROUND_B": "#F8F8F8",
      "COLOR_BACKGROUND_C": "#000000",
      "COLOR_BRAND_A": "#0aab2a",
      "COLOR_BRAND_B": "#0aab2a",
      "COLOR_CONTENT": "#000",
      "COLOR_INTENT_DANGER": "#D83D22",
      "COLOR_INTENT_HIGHLIGHT": "#0aab2a",
      "COLOR_INTENT_INFO": "#1E6DF6",
      "COLOR_INTENT_SUCCESS": "#0aab2a",
      "COLOR_INTENT_WARNING": "#F7CD45",
      "COLOR_KEYLINE": "rgba(0,0,0,0.08)",
      "COLOR_KEYLINE_SOLID": "#EBEBEB",
      "FONTS_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONTS_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONTS_SYSTEM": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_SIZE_BASE": "14px",
      "FONT_SIZE_HERO": "40px",
      "FONT_SIZE_LG": "18px",
      "FONT_SIZE_MD": "16px",
      "FONT_SIZE_SM": "11px",
      "FONT_SIZE_TITLE": "36px",
      "FONT_SIZE_XS": "9px",
      "FONT_STACK_BASE": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_STACK_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONT_STACK_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONT_WEIGHT_BASE": 400,
      "FONT_WEIGHT_BOLD": 800,
      "FONT_WEIGHT_SEMIBOLD": 600,
      "ICON_VIEWBOX_SIZE": 24,
      "LINE_HEIGHT_BASE": 1.4,
      "OPACITY_100": "1",
      "OPACITY_15": "0.15",
      "OPACITY_50": "0.5",
      "OPACITY_70": "0.7",
      "RADIUS_05": "4px",
      "RADIUS_1": "8px",
      "RADIUS_2": "16px",
      "RADIUS_3": "24px",
      "RADIUS_4": "32px",
      "RADIUS_5": "40px",
      "RADIUS_6": "48px",
      "RADIUS_7": "56px",
      "RADIUS_8": "64px",
      "SPACING_BASE": 8,
      "ZINDEX_STICKY": "1010",
      "ZINDEX_TOOLTIP": "1070",
      "name": "Keen",
    }
  }
/>
`;

exports[`Readout matches snapshot when rendering readoutItems 1`] = `
<ReadoutDisplay
  theme={
    Object {
      "BORDER_RADIUS_BASE": "3px",
      "COLOR_BACKGROUND_A": "#ffffff",
      "COLOR_BACKGROUND_B": "#F8F8F8",
      "COLOR_BACKGROUND_C": "#000000",
      "COLOR_BRAND_A": "#0aab2a",
      "COLOR_BRAND_B": "#0aab2a",
      "COLOR_CONTENT": "#000",
      "COLOR_INTENT_DANGER": "#D83D22",
      "COLOR_INTENT_HIGHLIGHT": "#0aab2a",
      "COLOR_INTENT_INFO": "#1E6DF6",
      "COLOR_INTENT_SUCCESS": "#0aab2a",
      "COLOR_INTENT_WARNING": "#F7CD45",
      "COLOR_KEYLINE": "rgba(0,0,0,0.08)",
      "COLOR_KEYLINE_SOLID": "#EBEBEB",
      "FONTS_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONTS_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONTS_SYSTEM": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_SIZE_BASE": "14px",
      "FONT_SIZE_HERO": "40px",
      "FONT_SIZE_LG": "18px",
      "FONT_SIZE_MD": "16px",
      "FONT_SIZE_SM": "11px",
      "FONT_SIZE_TITLE": "36px",
      "FONT_SIZE_XS": "9px",
      "FONT_STACK_BASE": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_STACK_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONT_STACK_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONT_WEIGHT_BASE": 400,
      "FONT_WEIGHT_BOLD": 800,
      "FONT_WEIGHT_SEMIBOLD": 600,
      "ICON_VIEWBOX_SIZE": 24,
      "LINE_HEIGHT_BASE": 1.4,
      "OPACITY_100": "1",
      "OPACITY_15": "0.15",
      "OPACITY_50": "0.5",
      "OPACITY_70": "0.7",
      "RADIUS_05": "4px",
      "RADIUS_1": "8px",
      "RADIUS_2": "16px",
      "RADIUS_3": "24px",
      "RADIUS_4": "32px",
      "RADIUS_5": "40px",
      "RADIUS_6": "48px",
      "RADIUS_7": "56px",
      "RADIUS_8": "64px",
      "SPACING_BASE": 8,
      "ZINDEX_STICKY": "1010",
      "ZINDEX_TOOLTIP": "1070",
      "name": "Keen",
    }
  }
>
  <ReadoutItem
    icon={[Function]}
    key="Error Rate|0.000%|undefined"
    title="Error Rate"
    value="0.000%"
  />
  <ReadoutItem
    key="CPU|0.000%|undefined"
    title="CPU"
    value="0.000%"
  />
</ReadoutDisplay>
`;

exports[`Readout matches snapshot when taking a color prop 1`] = `
<ReadoutDisplay
  theme={
    Object {
      "BORDER_RADIUS_BASE": "3px",
      "COLOR_BACKGROUND_A": "#ffffff",
      "COLOR_BACKGROUND_B": "#F8F8F8",
      "COLOR_BACKGROUND_C": "#000000",
      "COLOR_BRAND_A": "#0aab2a",
      "COLOR_BRAND_B": "#0aab2a",
      "COLOR_CONTENT": "#000",
      "COLOR_INTENT_DANGER": "#D83D22",
      "COLOR_INTENT_HIGHLIGHT": "#0aab2a",
      "COLOR_INTENT_INFO": "#1E6DF6",
      "COLOR_INTENT_SUCCESS": "#0aab2a",
      "COLOR_INTENT_WARNING": "#F7CD45",
      "COLOR_KEYLINE": "rgba(0,0,0,0.08)",
      "COLOR_KEYLINE_SOLID": "#EBEBEB",
      "FONTS_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONTS_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONTS_SYSTEM": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_SIZE_BASE": "14px",
      "FONT_SIZE_HERO": "40px",
      "FONT_SIZE_LG": "18px",
      "FONT_SIZE_MD": "16px",
      "FONT_SIZE_SM": "11px",
      "FONT_SIZE_TITLE": "36px",
      "FONT_SIZE_XS": "9px",
      "FONT_STACK_BASE": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "FONT_STACK_BRAND": "\\"Avenir Next\\", \\"Metropolis\\", \\"Helvetica Neue\\", Arial, sans-serif",
      "FONT_STACK_CODE": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
      "FONT_WEIGHT_BASE": 400,
      "FONT_WEIGHT_BOLD": 800,
      "FONT_WEIGHT_SEMIBOLD": 600,
      "ICON_VIEWBOX_SIZE": 24,
      "LINE_HEIGHT_BASE": 1.4,
      "OPACITY_100": "1",
      "OPACITY_15": "0.15",
      "OPACITY_50": "0.5",
      "OPACITY_70": "0.7",
      "RADIUS_05": "4px",
      "RADIUS_1": "8px",
      "RADIUS_2": "16px",
      "RADIUS_3": "24px",
      "RADIUS_4": "32px",
      "RADIUS_5": "40px",
      "RADIUS_6": "48px",
      "RADIUS_7": "56px",
      "RADIUS_8": "64px",
      "SPACING_BASE": 8,
      "ZINDEX_STICKY": "1010",
      "ZINDEX_TOOLTIP": "1070",
      "name": "Keen",
    }
  }
/>
`;
